# fastapi-auction

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/api/: routing.py
src/api/v1/auction/: controllers.py  dependencies.py  serializers.py
src/api/v1/auth/: controllers.py  dependencies.py  serializers.py
src/api/v1/users/: controllers.py  dependencies.py  serializers.py
src/core/auction/: domain.py  enums.py  exceptions.py  model.py  repositories.py  services.py
src/core/auth/: exceptions.py  services.py
src/core/bidding/: domain.py
src/core/common/: session.py
src/core/common/models/: base.py
src/core/common/repositories/: base.py
src/core/common/serializers/: base.py
src/core/common/utils/: generic_response.py
src/core/users/: domain.py  exceptions.py  model.py  repositories.py  services.py
