[tool.poetry]
name = "fastapi-auction"
version = "0.1.0"
description = ""
authors = ["daniskzn <danis.sharafiev@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.24"
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.108.0"
psycopg2-binary = "^2.9.9"
stories = "^5.1.0"
pydantic = {extras = ["email"], version = "^2.5.3"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
